@@ -22,7 +22,10 @@ public class DemoSonarIssuesService {
 
   // Intentional security hotspot: runtime exec with user-provided input
   public void runCommandUnsafely(String cmd) throws Exception {
-    Process p = Runtime.getRuntime().exec(cmd);
+    if (!cmd.matches("^[a-zA-Z0-9\\s\\-_.]+$")) {
+      throw new IllegalArgumentException("Invalid command characters");
+    }
+    Process p = Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", cmd});
     try (BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8))) {
       while (br.readLine() != null) {
         // Intentional issue: empty loop body / ignored output
